added @media styling and flex box atributes for a responsive website view

--- a/index.html
+++ b/index.html
@@ -11,23 +11,13 @@
 <body>
     <header>
         <h1>Ed's Portfolio Webpage</h1>
-        <nav>
-            <ul>
-                <li>
-                    <a href="#about-me">About Me</a>
-                </li>
-                <li>
-                    <a href="#projects">Projects</a>
-                </li>
-                <li>
-                    <a href="#contact">Contact</a>
-                </li>
-                <li>
-                    <a href="#resume">Resume</a>
-                </li>
-            </ul>
-        </nav>
     </header>
+    <nav>
+        <a href="#about-me">About Me</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+        <a href="#resume">Resume</a>
+    </nav>
 
     <div class="container">
         <img src="Assets/Images/OpenAir.jpg" alt="Open Air" style="width:100%;">
@@ -72,21 +62,27 @@
     </br>
         <div>
             <h3>JavaScript</h3>
+            <a href="https://github.com/edoliva" target="_blank">
             <img src="Assets/Images/JSCodingImage.jpeg" alt="JS Coding Image"/>
+            </a>
             <p>
                 UPenn JS projects.
             </p>
         </div>
         <div>
             <h3>EdTech</h3>
+            <a href="https://github.com/edoliva" target="_blank">
             <img src="Assets/Images/EdTech.jpg" alt="EdTech logo"/>
+            </a>
             <p>
                 Real-world EdTech use case projects.
             </p>
         </div>
         <div>
             <h3>Personal</h3>
+            <a href="https://github.com/edoliva" target="_blank">
             <img src="Assets/Images/JustForFun.png" alt="Brain lightbulb laptop images">
+            </a>
             <p>
                 Just for fun!
             </p>
