--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <link rel="stylesheet" type="text/css" href="Assets/css/reset.css"/>
-    <link rel="stylesheet" type="text/css" href="Assets/css/style.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="Assets/CSS/reset.css"/>
+    <link rel="stylesheet" type="text/css" href="Assets/CSS/style.css"/>
     <title>Ed's Portfolio</title>
 </head>
 
