changed font to Courier

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <div class="container">
         <img src="Assets/Images/OpenAir.jpg" alt="Open Air" style="width:100%;">
         <div class="bottom-center">
-            <a href="#about-me">↡ Full Stack Software Developer ↡</a>
+            <a href="#about-me">Full Stack Software Developer</a>
+        </br>
+            <a href="#about-me">↡ ------- ↡</a>
         </div>
     </div>
     <div class="content">
