added button display functionality

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav>
                 <button><a href="#about-me">About Me</a></button>
                 <button><a href="#projects">Projects</a></button>
-                <button><a href="#resume">Resume</a></button>
+                <!-- <button><a href="#resume">Resume</a></button> -->
                 <button><a href="#contact">Contact</a></button>
             </nav>
         </div>
@@ -32,7 +32,8 @@
             </div>
         </div>
         <div class="content">
-            <section id="about-me">
+            <div id="about-me"></div>           
+            <section>
                 <img src="Assets/Images/EdOlivaProfilePic.jpg" alt="Ed's profile pic" class="right" />
                 <h2>About Me</h2>
                 <p>
@@ -43,8 +44,7 @@
                     Interested in all things EdTech.
                 </p>
             </section>
-            <section id="resume">
-                <!-- <a href="https://github.com/edoliva" target="_blank"></a> -->
+            <!-- <section id="resume">
                 <a href="https://www.linkedin.com/in/edmond-oliva-6a412642/" target="_blank">
                     <img src="Assets/Images/ResumeIcon.png" alt="Office Tablescape with buzzword icons" class="left" />
                 </a>
@@ -52,10 +52,11 @@
                 <p>
                     Click on the image to view my resume, contact info below.
                 </p>
-            </section>
-            <section id="contact">
+            </section> -->
+            <div id="contact"></div>
+            <section>
                 <a href="https://www.linkedin.com/in/edmond-oliva-6a412642/" target="_blank">
-                    <img src="Assets/Images/LinkedinIcon.png" alt="Linkedin Social Media Icon" class="right" />
+                    <img src="Assets/Images/LinkedinIcon.png" alt="Linkedin Social Media Icon" class="left" />
                 </a>
                 <h2>Contact</h2>
                 <p>
@@ -64,7 +65,8 @@
             </section>
         </div>
 
-        <aside class="work" id="projects">
+        <aside class="work">
+        <div id="projects"></div>    
             <h1>Projects:</h1>
             </br>
             <div>
@@ -106,15 +108,16 @@
             </header>
             <nav>
                 <button id=home-btn><a href="https://edoliva.github.io/Portfolio/">Home</a></button>
-                <button><a href="https://www.linkedin.com/in/edmond-oliva-6a412642/"
-                        target="_blank">LinkedIn</a></button>
+                <button><a href="#projects1">Projects</a></button>
+                <button><a href="https://www.linkedin.com/in/edmond-oliva-6a412642/" target="_blank">LinkedIn</a></button>
                 <button><a href="https://github.com/edoliva" target="_blank">GitHub</a></button>
             </nav>
         </div>
         <div class="container">
             <img src="Assets/Images/spainoverview.jpg" alt="Spain Overview" style="width:100%;">
         </div>
-        <aside class="work" id="projects">
+        <aside class="work">
+            <div id="projects1"></div>   
             <h1>Projects:</h1>
             </br>
             <div>
@@ -186,15 +189,16 @@
             </header>
             <nav>
                 <button id=home-btn><a href="https://edoliva.github.io/Portfolio/">Home</a></button>
-                <button><a href="https://www.linkedin.com/in/edmond-oliva-6a412642/"
-                        target="_blank">LinkedIn</a></button>
+                <button><a href="#projects2">Projects</a></button>
+                <button><a href="https://www.linkedin.com/in/edmond-oliva-6a412642/" target="_blank">LinkedIn</a></button>
                 <button><a href="https://github.com/edoliva" target="_blank">GitHub</a></button>
             </nav>
         </div>
         <div class="container">
             <img src="Assets/Images/nycoverview.jpg" alt="NYC Overview" style="width:100%;">
         </div>
-        <aside class="work" id="projects">
+        <aside class="work">
+            <div id="projects2"></div>   
             <h1>Projects:</h1>
             </br>
             <div>
