--- a/index.html
+++ b/index.html
@@ -26,9 +26,11 @@
         <div class="container">
             <img src="Assets/Images/OpenAir.jpg" alt="Open Air" style="width:100%;">
             <div class="bottom-center">
-                <a href="#about-me">Full Stack Software Developer</a>
-                </br>
-                <a href="#about-me">↡ ------- ↡</a>
+                <a href="#about-me">
+                    <p>I'm a web designer and developer.</p>
+                    <p>Get in touch and let's colab on something awesome.</p>
+                    <p>↡ ------- ↡</p>
+                </a>
             </div>
         </div>
         <div class="content">
@@ -41,7 +43,7 @@
                 </p>
                 </br>
                 <p>
-                    Interested in all things EdTech.
+                    Interested in all things EdTech, love using APIs.
                 </p>
             </section>
             <!-- <section id="resume">
@@ -67,31 +69,19 @@
 
         <aside class="work">
         <div id="projects"></div>    
-            <h1>Projects:</h1>
+            <h1>VIEW PROJECTS:</h1>
             </br>
             <div>
-                <h3>JavaScript</h3>
+                <h3>UPenn Bootcamp</h3>
                 <img id="JS-Projects-Btn" src="Assets/Images/JSCodingImage.jpeg" alt="JS Coding Image" />
-                <p>
-                    UPenn JS projects.
-                </p>
             </div>
             <div>
                 <h3>EdTech</h3>
                 <img id="EdTech-Projects-Btn" src="Assets/Images/EdTech.jpg" alt="EdTech logo" />
-                </a>
-                <p>
-                    Real-world EdTech use case projects.
-                </p>
             </div>
             <div>
-                <h3>Personal</h3>
-                <a href="https://github.com/edoliva" target="_blank">
-                    <img src="Assets/Images/JustForFun.png" alt="Brain lightbulb laptop images">
-                </a>
-                <p>
-                    Just for fun!
-                </p>
+                <h3>Just-For-Fun</h3>
+                <img src="Assets/Images/JustForFun.png" alt="Brain lightbulb laptop images">
             </div>
         </aside>
 
@@ -118,31 +108,19 @@
         </div>
         <aside class="work">
             <div id="projects1"></div>   
-            <h1>Projects:</h1>
+            <h1>VIEW PROJECTS:</h1>
             </br>
             <div>
-                <h3>JavaScript</h3>
+                <h3>UPenn Bootcamp</h3>
                 <img id="JS-Projects-Btn1" src="Assets/Images/JSCodingImage.jpeg" alt="JS Coding Image" />
-                <p>
-                    UPenn JS projects.
-                </p>
             </div>
             <div>
                 <h3>EdTech</h3>
                 <img id="EdTech-Projects-Btn1" src="Assets/Images/EdTech.jpg" alt="EdTech logo" />
-                </a>
-                <p>
-                    Real-world EdTech use case projects.
-                </p>
             </div>
             <div>
-                <h3>Personal</h3>
-                <a href="https://github.com/edoliva" target="_blank">
-                    <img src="Assets/Images/JustForFun.png" alt="Brain lightbulb laptop images">
-                </a>
-                <p>
-                    Just for fun!
-                </p>
+                <h3>Just-For-Fun</h3>
+                <img src="Assets/Images/JustForFun.png" alt="Brain lightbulb laptop images">
             </div>
         </aside>
         <div class="content" class="content-projects">
@@ -150,7 +128,7 @@
                 <img src="Assets/Images/drinkimage.jpg" alt="cocktail image" class="right" />
                 <h2>Mix-It-Up</h2>
                 <p>
-                    Cocktail and Meal Ingredient Search Tool
+                    (API) Cocktail and Meal Ingredient Search Tool
                 </p>
                 </br>
                 <p>
@@ -161,7 +139,7 @@
                 <img src="Assets/Images/weatherlogo.jpg" alt="Weather logo" class="left" />
                 <h2>Weather Dashboard</h2>
                 <p>
-                    Search by city name to get the most up-to-date weather, as well as the 5 day forcast.
+                    (API) Search by city name to get the most up-to-date weather, as well as the 5 day forcast.
                 </p> </br>
                 <p>
                     Past searches save to local storage, and become clickable search buttons.
@@ -199,31 +177,19 @@
         </div>
         <aside class="work">
             <div id="projects2"></div>   
-            <h1>Projects:</h1>
+            <h1>VIEW PROJECTS:</h1>
             </br>
             <div>
-                <h3>JavaScript</h3>
+                <h3>UPenn Bootcamp</h3>
                 <img id="JS-Projects-Btn2" src="Assets/Images/JSCodingImage.jpeg" alt="JS Coding Image" />
-                <p>
-                    UPenn JS projects.
-                </p>
             </div>
             <div>
                 <h3>EdTech</h3>
                 <img id="EdTech-Projects-Btn2" src="Assets/Images/EdTech.jpg" alt="EdTech logo" />
-                </a>
-                <p>
-                    Real-world EdTech use case projects.
-                </p>
             </div>
             <div>
-                <h3>Personal</h3>
-                <a href="https://github.com/edoliva" target="_blank">
-                    <img src="Assets/Images/JustForFun.png" alt="Brain lightbulb laptop images">
-                </a>
-                <p>
-                    Just for fun!
-                </p>
+                <h3>Just-For-Fun</h3>
+                <img src="Assets/Images/JustForFun.png" alt="Brain lightbulb laptop images">
             </div>
         </aside>
         <div class="content" class="content-projects">
