updated repo and live link, added screenshots

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </header>
             <nav>
                 <button id=home-btn><a href="https://edoliva.github.io/Portfolio/">Home</a></button>
-                <button><a href="#projects1">Projects</a></button>
+                <!-- <button><a href="#projects1">Projects</a></button> -->
                 <button><a href="https://www.linkedin.com/in/edmond-oliva-6a412642/" target="_blank">LinkedIn</a></button>
                 <button><a href="https://github.com/edoliva" target="_blank">GitHub</a></button>
             </nav>
@@ -135,6 +135,15 @@
                     Search by ingredient for a unique recipe, or explore new ingredients you may not have known about!
                 </p>
             </section>
+            <div class="project-btns">
+                    <button><a href="https://github.com/edoliva/Mix-It-Up-Food-and-Drink-Search-Tool" target="_blank">GitHub Repo</a></button>
+                    <button><a href="https://edoliva.github.io/Mix-It-Up-Food-and-Drink-Search-Tool/" target="_blank">Deployed Version</a></button>
+                </br>
+                    <img src="Assets/Images/CocktailsGin.png" alt="cocktail gin search" class="project-screen-shots"/>
+                    <img src="Assets/Images/CocktailsOrangeBitters.png" alt="cocktail ingredient" class="project-screen-shots"/>
+                    <img src="Assets/Images/MealsSalmon.png" alt="meal salmon search" class="project-screen-shots"/>
+                    <img src="Assets/Images/MealsSalmonRecipe.png" alt="meal salmon recipe" class="project-screen-shots"/>
+            </div>
             <section id="weather-dashboard-btn">
                 <img src="Assets/Images/weatherlogo.jpg" alt="Weather logo" class="left" />
                 <h2>Weather Dashboard</h2>
@@ -145,6 +154,15 @@
                     Past searches save to local storage, and become clickable search buttons.
                 </p>
             </section>
+            <div class="project-btns">
+                <button><a href="https://github.com/edoliva/Weather-Dashboard" target="_blank">GitHub Repo</a></button>
+                <button><a href="https://edoliva.github.io/Weather-Dashboard/" target="_blank">Deployed Version</a></button>
+            </br>
+                <img src="Assets/Images/FullscreenSydney.png" alt="full screen weather Sydney" class="project-screen-shots"/>
+                <img src="Assets/Images/Fullscreen.png" alt="full screen weather" class="project-screen-shots"/>
+                <img src="Assets/Images/BlankSearchError.png" alt="blank search" class="project-screen-shots"/>
+                <img src="Assets/Images/ClearSearch.png" alt="clear recipe" class="project-screen-shots"/>
+            </div>
             <section id="random-password-btn">
                 <img src="Assets/Images/lockimage.png" alt="Lock Icon" class="right" />
                 </a>
@@ -156,6 +174,15 @@
                     Built-in check so all user criteria is met before delivering a final password. 
                 </p>
             </section>
+            <div class="project-btns">
+                <button><a href="https://github.com/edoliva/RandomPasswordGenerator" target="_blank">GitHub Repo</a></button>
+                <button><a href="https://edoliva.github.io/RandomPasswordGenerator/Develop/index.html" target="_blank">Deployed Version</a></button>
+            </br>
+                <img src="Assets/Images/WebpageNoInputs.png" alt="WebpageNoInputs" class="project-screen-shots"/>
+                <img src="Assets/Images/Output.png" alt="Output" class="project-screen-shots"/>
+                <img src="Assets/Images/ConsoleLog.png" alt="ConsoleLog Error" class="project-screen-shots"/>
+                <img src="Assets/Images/CharacterAmount.png" alt="CharacterAmount" class="project-screen-shots"/>
+            </div>
         </div>
     </div>
 
@@ -167,7 +194,7 @@
             </header>
             <nav>
                 <button id=home-btn><a href="https://edoliva.github.io/Portfolio/">Home</a></button>
-                <button><a href="#projects2">Projects</a></button>
+                <!-- <button><a href="#projects2">Projects</a></button> -->
                 <button><a href="https://www.linkedin.com/in/edmond-oliva-6a412642/" target="_blank">LinkedIn</a></button>
                 <button><a href="https://github.com/edoliva" target="_blank">GitHub</a></button>
             </nav>
@@ -204,6 +231,15 @@
                     Save your score and initials to local storage. Try again to beat the high score!
                 </p>
             </section>
+            <div class="project-btns">
+                <button><a href="https://github.com/edoliva/WebAPIsCodeQuiz" target="_blank">GitHub Repo</a></button>
+                <button><a href="https://edoliva.github.io/WebAPIsCodeQuiz/" target="_blank">Deployed Version</a></button>
+            </br>
+                <img src="Assets/Images/InfoBox.png" alt="Info Box" class="project-screen-shots"/>
+                <img src="Assets/Images/QuizQuestionBox.png" alt="Quiz Question Box" class="project-screen-shots"/>
+                <img src="Assets/Images/FinalScoreBox.png" alt="Final Score Box" class="project-screen-shots"/>
+                <img src="Assets/Images/HighScoreBox.png" alt="High Score Box" class="project-screen-shots"/>
+            </div>
             <section id="student-schedule-btn">
                 <img src="Assets/Images/schedulelogo.jpg" alt="Schedule logo" class="left" />
                 <h2>Student Scheduler</h2>
@@ -214,6 +250,15 @@
                     Hour blocks will change color throughout the day so you don't fall behind!
                 </p>
             </section>
+            <div class="project-btns">
+                <button><a href="https://github.com/edoliva/StudentScheduler" target="_blank">GitHub Repo</a></button>
+                <button><a href="https://edoliva.github.io/StudentScheduler/index.html" target="_blank">Deployed Version</a></button>
+            </br>
+                <img src="Assets/Images/Header.png" alt="Header" class="project-screen-shots"/>
+                <img src="Assets/Images/TextInInput.png" alt="Text input" class="project-screen-shots"/>
+                <img src="Assets/Images/DoneButton.png" alt="Done button" class="project-screen-shots"/>
+                <img src="Assets/Images/TimeBoxStick.png" alt="Time color change" class="project-screen-shots"/>
+            </div>
             <section id="mix-it-up-btn">
                 <img src="Assets/Images/schoollogo.jpg" alt="Back to School Image" class="right" />
                 <h2>More to come!!</h2>
