updated contact button

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <button><a href="#about-me">About Me</a></button>
                 <button><a href="#projects">Projects</a></button>
                 <!-- <button><a href="#resume">Resume</a></button> -->
-                <button><a href="#contact">Contact</a></button>
+                <button><a href="https://www.linkedin.com/in/edmond-oliva-6a412642/" target="_blank">LinkedIn</a></button>
             </nav>
         </div>
 
