--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <img src="Assets/Images/OpenAir.jpg" alt="Open Air" style="width:100%;">
             <div class="bottom-center">
                 <a href="#about-me">
-                    <p>I'm a web designer and developer.</p>
+                    <p>I'm Ed, a web designer and developer.</p> </br>
                     <p>Get in touch and let's colab on something awesome.</p>
                     <p>↡ ------- ↡</p>
                 </a>
@@ -94,7 +94,7 @@
     <div class=JS-Project-Page>
         <div class=navDiv>
             <header>
-                <h1>Ed's UPenn Projects</h1>
+                <h1>UPenn Projects</h1>
             </header>
             <nav>
                 <button id=home-btn><a href="https://edoliva.github.io/Portfolio/">Home</a></button>
@@ -190,7 +190,7 @@
     <div class=EdTech-Project-Page>
         <div class=navDiv>
             <header>
-                <h1>Ed's EdTech Projects</h1>
+                <h1>EdTech Projects</h1>
             </header>
             <nav>
                 <button id=home-btn><a href="https://edoliva.github.io/Portfolio/">Home</a></button>
