updated nav bar spacing and removed header

--- a/index.html
+++ b/index.html
@@ -11,10 +11,13 @@
 
 <body>
     <div class=main-screen>
-        <div class=navDiv>
+        <div class=navDivHeader>
             <header>
                 <h1>Ed's Portfolio Webpage</h1>
             </header>
+        </div>
+    </br>
+        <div class=navDiv>
             <nav>
                 <button><a href="#about-me">About Me</a></button>
                 <button><a href="#projects">Projects</a></button>
@@ -93,10 +96,11 @@
     <!-- JS Projects Page -->
     <div class=JS-Project-Page>
         <div class=navDiv>
-            <header>
+            <!-- <header>
                 <h1>UPenn Projects</h1>
-            </header>
+            </header> -->
             <nav>
+            </br>
                 <button id=home-btn><a href="https://edoliva.github.io/Portfolio/">Home</a></button>
                 <!-- <button><a href="#projects1">Projects</a></button> -->
                 <button><a href="https://www.linkedin.com/in/edmond-oliva-6a412642/" target="_blank">LinkedIn</a></button>
@@ -105,6 +109,12 @@
         </div>
         <div class="container">
             <img src="Assets/Images/spainoverview.jpg" alt="Spain Overview" style="width:100%;">
+            <div class="bottom-centerProj">
+                <a href="#projects1">
+                    <p>UPenn Projects</p>
+                    <p>↡ ------- ↡</p>
+                </a>
+            </div>
         </div>
         <aside class="work">
             <div id="projects1"></div>   
@@ -189,9 +199,9 @@
     <!-- EdTEch Projects Page -->
     <div class=EdTech-Project-Page>
         <div class=navDiv>
-            <header>
+            <!-- <header>
                 <h1>EdTech Projects</h1>
-            </header>
+            </header> -->
             <nav>
                 <button id=home-btn><a href="https://edoliva.github.io/Portfolio/">Home</a></button>
                 <!-- <button><a href="#projects2">Projects</a></button> -->
@@ -201,6 +211,12 @@
         </div>
         <div class="container">
             <img src="Assets/Images/nycoverview.jpg" alt="NYC Overview" style="width:100%;">
+            <div class="bottom-centerProj">
+                <a href="#projects2">
+                    <p>EdTech Projects</p>
+                    <p>↡ ------- ↡</p>
+                </a>
+            </div>
         </div>
         <aside class="work">
             <div id="projects2"></div>   
