changed font colors

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div class="bottom-center">
                 <a href="#about-me">
                     <p>I'm Ed, a web designer and developer.</p> </br>
-                    <p>Get in touch and let's colab on something awesome.</p>
+                    <p>Let's collab on something awesome.</p>
                     <p>↡ ------- ↡</p>
                 </a>
             </div>
